<?xml version="1.0"?>
<package>
  <name>slamkit_ros2</name>
  <version>0.1.0</version>
  <description>The slamkit ros2 package</description>

  <maintainer email="thejacobcohen@gmail.com">j</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <buildtool_depend>std_msgs</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_flake8</test_depend>
  <test_depend>ament_cmake_copyright</test_depend>
  <test_depend>ament_cpplint</test_depend>
  <test_depend>ament_cmake_cpplint</test_depend>
  <test_depend>ament_cmake_uncrustify</test_depend>
  <test_depend>ament_cmake_cppcheck</test_depend>

  <run_depend>rclcpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
